src/scss/darth10.github.io.scss
@import '_code';
@import '_mixins';

$light-color: #f2f2f2;
$header-font: 'Alegreya Sans';

h1, h2, h3, h4, h5, h6 {
  font-family: $header-font;
}

body {
  color: #333;
  background-color: $light-color;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 16px;
}

pre {
  overflow-x: scroll;
  overflow-y: hidden;
  white-space: nowrap;
  padding: inherit;
  border: none;
  border-radius: 4px;

  code {
    @include code-font;
    white-space: pre;
  }
}

code {
  @include code-font;
  color: #428bca;
}

footer {
  @include meta-font;

  text-align: center;
  padding-top: 14px;
}

svg {
  &[data-prefix=fab], &[data-prefix=far] {
    margin-right: 16px;
    color: gray;
  }
}

.container {
  max-width: 1000px;
  padding-top: 60px;
}

.row {
  margin: auto;
}

.right {
  float: right;
  text-align: right;
}

.navbar-brand {
  font-family: $header-font;
  font-size: 24px;
}

.navbar-nav {
  flex-grow: inherit;
}

.post-header {
  @include border;
  @include header;
  @include header-padding;
}

.post-preview-header {
  @include header;
  @include header-padding;
}

.post-meta {
  @include meta-font;
  color: rgba(0, 0, 0, 0.4);
}

.chart {
  width: 90%;
  margin: auto;
}

.contact-info {
  display: table;
  margin: auto;
}

#page-header {
  @include border;
  @include header;
}

#sidebar {
  margin-left: 15px;
  margin-top: 50px;
}

#content {
  background-color: #fff;
  border-radius: 3px;
  box-shadow: 0 0 0 0, 0 6px 12px rgba(34, 34, 34, 0.1);

  img {
    max-width: 90%;
    height: auto;
    display: block;

    &.photo {
      max-width: 80%;
      height: auto;
      border-radius: 4px;
    }
  }
}

#post-tags {
  margin-top: 30px;
}

#prev-next {
  padding: 15px 0;
}

@media (min-width: 320px) {
  .chart {
    height: 200px;
  }

  .row {
    max-width: 100%;
  }
}

@media (min-width: 768px) {
  .chart {
    height: 300px;
  }

  .row {
    max-width: 80%;
  }

  #content {
    margin-top: 30px;
    padding: 30px 40px;
  }
}

@media (max-width: 767px) {
  body {
    @include meta-font;
  }

  .post-meta .right {
    float: left;
    text-align: left;
  }

  #content {
    padding: 15px;
  }
}

@media (prefers-color-scheme: dark) {
  body {
    color: $light-color;
    background-color: black;
  }

  #content {
    background-color: #090909;
  }

  .post-meta {
    color: rgba(255, 255, 255, 0.5);
  }
}

